fix margin on mobile for skills grid

--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -60,7 +60,7 @@
     }
   }
   .ts-box {
-    margin-right: 0;
+    margin-right: 3px;
     .box {
       width: 18px;
       height: 18px;
